Project development phase/Sprint 4/Sprint 4/kubernetes/ibm_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nutrition-assistant-application

spec:
  replicas: 5
  selector:
    matchLabels:
      app: nutrition-assistant-application
  template:
    metadata:
      labels:
        app: nutrition-assistant-application
