Project development phase/Sprint 4/Sprint 4/kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nutrition-assistant-application-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: nutrition-assistant-application
